--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -19,7 +19,8 @@
     margin: 0;
 
     a,
-    li {
+    li,
+    .headerNickname {
       color: white;
       text-decoration: none;
       font-size: 21px;
